--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/carousel/carousel.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/carousel/carousel.html
@@ -16,28 +16,64 @@
   ~
 */-->
 
-<sly data-sly-use.model="pl.ds.kyanite.common.components.models.CarouselComponent">
-  <div class="carousel">
-    <sly data-sly-test="${model.hasChildren}">
-      <div data-sly-test="${model.paginationNeeded}" class="buttons is-right">
-        <button class="button previous-page-button" disabled>
-          <span class="icon">
-            <i class="mdi mdi-arrow-left"></i>
-          </span>
-        </button>
-        <button class="button next-page-button">
-          <span class="icon">
-            <i class="mdi mdi-arrow-right"></i>
-          </span>
-        </button>
+<sly
+  data-sly-use.model="pl.ds.kyanite.common.components.models.CarouselComponent"
+>
+  <sly
+    data-sly-set.CSSclasses="${model.classes @ join=' '}"
+  ></sly>
+  <sly data-sly-test="${resource.hasChildren}">
+    <sly data-sly-test="${!wcmmode.isEdit}">
+      <div
+        class="carousel glide ${CSSclasses}"
+        data-items-per-row-sm="${model.mobileElementsInRow}"
+        data-items-per-row-md="${model.tabletElementsInRow}"
+        data-items-per-row-lg="${model.desktopElementsInRow}"
+      >
+        <div data-glide-el="controls" class="buttons is-right">
+          <button data-glide-dir="<" class="button previous-page-button">
+            <span class="icon">
+              <i class="mdi mdi-arrow-left"></i>
+            </span>
+          </button>
+          <button data-glide-dir=">" class="button next-page-button">
+            <span class="icon">
+              <i class="mdi mdi-arrow-right"></i>
+            </span>
+          </button>
+        </div>
+        <div class="glide__track" data-glide-el="track" tabindex="0">
+          <ul class="glide__slides">
+            <sly data-sly-list.item="${model.items}">
+              <li>
+                <sly
+                  data-sly-resource="${item.path @ resourceType=item.resourceType}"
+                ></sly>
+              </li>
+            </sly>
+          </ul>
+        </div>
       </div>
+    </sly>
+    <sly data-sly-test="${wcmmode.isEdit}">
       <div class="columns is-mobile is-multiline">
         <sly data-sly-list.item="${model.items}">
-          <div class="carousel-item ${wcmmode.isEdit || itemList.index <= 3 ? 'visible' : ''} column is-${model.desktopColumns}-desktop is-${model.tabletColumns}-tablet is-${model.mobileColumns}-mobile">
-            <sly data-sly-resource="${item.path @ resourceType=item.resourceType}"></sly>
+          <div
+            class="column is-${model.desktopColumns}-desktop is-${model.tabletColumns}-tablet is-${model.mobileColumns}-mobile"
+          >
+            <sly
+              data-sly-resource="${item.path @ resourceType=item.resourceType}"
+            ></sly>
           </div>
         </sly>
       </div>
     </sly>
-  </div>
+  </sly>
+  <sly data-sly-test="${!resource.hasChildren}">
+    <sly
+      data-sly-use.lib="/libs/wcm/foundation/components/commons/templates.html"
+      data-sly-call="${lib.placeholder @ classes=CSSclasses}"
+    >
+    </sly>
+  </sly>
 </sly>
