--- a/applications/common/frontend/src/main.scss
+++ b/applications/common/frontend/src/main.scss
@@ -15,6 +15,7 @@
  *     limitations under the License.
  * -->
  */
+@use '../node_modules/@glidejs/glide/src/assets/sass/glide.core.scss';
 @use 'src/global-variables';
 @use 'src/bulma-overwrite';
 @use 'src/components';
