[KYAN-114] Change model class

--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/navbar/navbarmenu/navbarmenu.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/navbar/navbarmenu/navbarmenu.html
@@ -16,7 +16,7 @@
   ~
 */-->
 
-<sly data-sly-use.model="pl.ds.kyanite.common.components.models.navbar.NavbarBrandComponent">
+<sly data-sly-use.model="pl.ds.kyanite.common.components.models.navbar.NavbarMenuComponent">
   <sly data-sly-test="${resource.hasChildren}">
     <sly data-sly-list.item="${model.metaNavigation}">
       <a class="navbar-item" href="${item.url}">
