--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/navbar/navbarmegadropdown/navbarmegadropdown.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/navbar/navbarmegadropdown/navbarmegadropdown.html
@@ -23,28 +23,36 @@
       ${model.dropdownLabel}
     </a>
 
-    <div class="navbar-dropdown ${model.isBoxed ? 'is-boxed' : ''}">
-      <sly data-sly-list.column="${model.dropdownColumns}">
-        <div class="navbar-dropdown-column">
-          <sly data-sly-test="${column.type == 'text'}">
-            <sly data-sly-list.section="${column.sections}">
-              <p>${section.label} </p>
-              <sly data-sly-list.item="${section.sectionItems}">
-                <a class="navbar-item" href="${item.url}">
-                  ${item.label}
-                </a>
-              </sly>
+    <div class="navbar-mega-dropdown navbar-dropdown ${model.isBoxed ? 'is-boxed' : ''}">
+      <div class="container">
+        <div class="columns is-desktop">
+          <sly data-sly-list.column="${model.dropdownColumns}">
+            <sly data-sly-test="${column.type == 'text'}">
+              <div class="column text-column">
+                <sly data-sly-list.section="${column.sections}">
+                    <span class="navbar-section">
+                  ${section.label}
+                    </span>
+                  <sly data-sly-list.item="${section.sectionItems}">
+                    <a class="navbar-item" href="${item.url}">
+                      ${item.label}
+                    </a>
+                  </sly>
+                </sly>
+              </div>
             </sly>
-          </sly>
-          <sly data-sly-test="${column.type != 'text'}">
-            <sly data-sly-list.highlight="${column.highlights}">
-              <a class="navbar-item" href="${highlight.url}">
-                ${highlight.label}
-              </a>
+            <sly data-sly-test="${column.type == 'highlights'}">
+              <div class="column highlight-column">
+                <sly data-sly-list.highlight="${column.highlights}">
+                  <a class="navbar-item" href="${highlight.url}">
+                    ${highlight.label}
+                  </a>
+                </sly>
+              </div>
             </sly>
           </sly>
         </div>
-      </sly>
+      </div>
     </div>
   </div>
 </sly>
