--- a/applications/common/frontend/src/atomic-design-system/03-organism/o.navbar/o.navbar.scss
+++ b/applications/common/frontend/src/atomic-design-system/03-organism/o.navbar/o.navbar.scss
@@ -28,6 +28,7 @@
 @use 'src/atomic-design-system/00-token/t.font' as font;
 
 $navbar-height: 3.25rem;
+$color-navbar-link: var(--color-grey--900);
 
 @mixin o-navbar {
   .container {
@@ -82,7 +83,7 @@ $navbar-height: 3.25rem;
 
   a.navbar-link,
   a.navbar-item {
-    color: var(--color-grey--900) !important;
+    color: $color-navbar-link;
     font-weight: var(--font-weight-500);
   }
 
@@ -197,13 +198,33 @@ $navbar-height: 3.25rem;
     left: 0;
     top: $navbar-height;
 
+    // make sure columns layout will be 5 columns of equal width
+    .column {
+      flex: 0 0 20%;
+      width: 20%;
+      overflow: hidden;
+    }
+
+    // reset navbar-item style
     .navbar-item {
       padding: 0;
+      white-space: normal;
+    }
+
+    // links hover effect
+    .navbar-item {
+      display: inline-block;
+      @include link.a-animated-underline-link;
+
+      &:hover {
+        background-color: unset;
+      }
     }
 
     .text-column {
       display: flex;
       flex-direction: column;
+      align-items: flex-start;
 
       .navbar-section {
         font-size: var(--font-size-16);
@@ -225,18 +246,25 @@ $navbar-height: 3.25rem;
       .navbar-item + .navbar-section {
         @extend .mt-6;
       }
+    }
 
-      // links hover effect
-      a.navbar-item, a.navbar-section {
-        display: inline-block;
-        width: fit-content;
+    .highlights-column {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
 
-        @include link.a-animated-underline-link;
-
-        &:hover {
-          background-color: unset;
-        }
+      .navbar-item + .navbar-item {
+        @extend .mt-4;
       }
+
+      .navbar-item {
+        font-size: var(--font-size-32);
+        font-weight: var(--font-weight-500);
+        line-height: var(--line-height-150);
+        color: $color-navbar-link;
+      }
+
     }
   }
 }
