--- a/applications/common/frontend/src/atomic-design-system/03-organism/o.navbar/o.navbar.scss
+++ b/applications/common/frontend/src/atomic-design-system/03-organism/o.navbar/o.navbar.scss
@@ -46,10 +46,7 @@ $color-navbar-link: var(--color-grey--900);
 
   .navbar-item:not(.navbar-dropdown a.navbar-item):last-of-type {
     @include breakpoint.media-breakpoint-large {
-      padding: var(--spacing-1)
-        0
-        var(--spacing-1)
-        0;
+      padding: var(--spacing-1) 0 var(--spacing-1) 0;
     }
   }
 
@@ -186,85 +183,90 @@ $color-navbar-link: var(--color-grey--900);
     }
   }
 
-  .navbar-mega-dropdown {
-    background-color: var(--color-grey--100); // TODO config?
-    border-radius: var(--border-radius-0);
-    border: 0;
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.16);
-    padding: var(--spacing-5_2) 0;
-
-    position: fixed;
-    width: 100vw;
-    left: 0;
-    top: $navbar-height;
-
-    // make sure columns layout will be 5 columns of equal width
-    .column {
-      flex: 0 0 20%;
-      width: 20%;
-      overflow: hidden;
+  @media(min-width: 1024px) {
+    .dupa {
+      display: none;
     }
+    .navbar-mega-dropdown {
+      background-color: var(--color-grey--100); // TODO config?
+      border-radius: var(--border-radius-0);
+      border: 0;
+      box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.16);
+      padding: var(--spacing-5_2) 0;
 
-    // reset navbar-item style
-    .navbar-item {
-      padding: 0;
-      white-space: normal;
-    }
+      position: fixed;
+      width: 100vw;
+      left: 0;
+      top: $navbar-height;
 
-    // links hover effect
-    .navbar-item {
-      display: inline-block;
-      @include link.a-animated-underline-link;
-
-      &:hover {
-        background-color: unset;
-      }
-    }
-
-    .text-column {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-
-      .navbar-section {
-        font-size: var(--font-size-16);
-        font-weight: var(--font-weight-600);
-        line-height: var(--line-height-150);
-        color: var(--color-grey--500);
+      // make sure columns layout will be 5 columns of equal width
+      .column {
+        flex: 0 0 20%;
+        width: 20%;
+        overflow: hidden;
       }
 
-      // distance between elements:
-      .navbar-section + .navbar-section,
-      .navbar-item + .navbar-item {
-        @extend .mt-4;
-      }
-
-      .navbar-section + .navbar-item {
-        @extend .mt-5;
-      }
-
-      .navbar-item + .navbar-section {
-        @extend .mt-6;
-      }
-    }
-
-    .highlights-column {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: flex-start;
-
-      .navbar-item + .navbar-item {
-        @extend .mt-4;
-      }
-
+      // reset navbar-item style
       .navbar-item {
-        font-size: var(--font-size-32);
-        font-weight: var(--font-weight-500);
-        line-height: var(--line-height-150);
-        color: $color-navbar-link;
+        padding: 0;
+        white-space: normal;
       }
 
+      // links hover effect
+      .navbar-item {
+        display: inline-block;
+        @include link.a-animated-underline-link;
+
+        &:hover {
+          background-color: unset;
+        }
+      }
+
+      .text-column {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+
+        .navbar-section {
+          font-size: var(--font-size-16);
+          font-weight: var(--font-weight-600);
+          line-height: var(--line-height-150);
+          color: var(--color-grey--500);
+        }
+
+        // distance between elements:
+        .navbar-section + .navbar-section,
+        .navbar-item + .navbar-item {
+          margin-top: var(--spacing-4);
+        }
+
+        .navbar-section + .navbar-item {
+          margin-top: var(--spacing-5);
+        }
+
+        .navbar-item + .navbar-section {
+          margin-top: var(--spacing-6);
+        }
+      }
+
+      .highlights-column {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+
+        .navbar-item + .navbar-item {
+          margin-top: var(--spacing-4);
+        }
+
+        .navbar-item {
+          font-size: var(--font-size-32);
+          font-weight: var(--font-weight-500);
+          line-height: var(--line-height-150);
+          color: $color-navbar-link;
+        }
+
+      }
     }
   }
 }
