--- a/applications/common/frontend/src/atomic-design-system/03-organism/o.navbar/o.navbar.scss
+++ b/applications/common/frontend/src/atomic-design-system/03-organism/o.navbar/o.navbar.scss
@@ -27,26 +27,29 @@
 @use 'src/atomic-design-system/01-atom/a.animated-underline-link' as link;
 @use 'src/atomic-design-system/00-token/t.font' as font;
 
+$color-navbar-link: var(--color-grey--900);
+
 @mixin o-navbar {
+  // causes the element to establish a containing block for all descendants (used for fixed-position descendants)
+  // https://www.w3.org/TR/css-transforms-1/#containing-block-for-all-descendants
+  transform: translateX(0);
+
   .container {
     align-items: center;
   }
 
-  .navbar,
   .navbar-end,
   .navbar-menu,
   .navbar-start {
     @include breakpoint.media-breakpoint-large {
       align-items: center;
+      height: 100%;
     }
   }
 
   .navbar-item:not(.navbar-dropdown a.navbar-item):last-of-type {
     @include breakpoint.media-breakpoint-large {
-      padding: var(--spacing-1) 
-        0 
-        var(--spacing-1) 
-        0;
+      padding: var(--spacing-1) 0 var(--spacing-1) 0;
     }
   }
 
@@ -80,7 +83,7 @@
 
   a.navbar-link,
   a.navbar-item {
-    color: var(--color-grey--900) !important;
+    color: $color-navbar-link;
     font-weight: var(--font-weight-500);
   }
 
@@ -101,7 +104,7 @@
 
       @include breakpoint.media-breakpoint-large {
         flex-direction: row;
-        align-items: baseline;
+        align-items: center;
         gap: var(--spacing-6);
       }
     }
@@ -120,6 +123,7 @@
     }
 
     .navbar-item.has-dropdown {
+      height: 100%;
       &:hover {
         .navbar-link {
           background-color: unset !important; // override Bulma complex selector
@@ -141,9 +145,7 @@
       }
 
       .navbar-dropdown {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
+        display: block;
 
         @include breakpoint.media-breakpoint-large {
           display: none;
@@ -163,6 +165,7 @@
           @extend .ml-3;
           @extend .mr-1;
         }
+
         @include breakpoint.media-breakpoint-large {
           padding-left: 0;
           padding-right: 0 !important; // overwrite above @extend .pr-3
@@ -179,6 +182,91 @@
       @include breakpoint.media-breakpoint-large {
         margin-top: 0 !important; // overwrite above @extend .mt-2
       }
+    }
+  }
+
+  @include breakpoint.media-breakpoint-large {
+    .navbar-mega-dropdown {
+      background-color: var(--color-grey--100);
+      border-radius: var(--border-radius-0);
+      border: 0;
+      box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.16);
+      padding: var(--spacing-5_2) 0;
+
+      position: fixed;
+      width: 100%;
+      left: 0;
+
+      // make sure columns layout will be 5 columns of equal width
+      .column {
+        flex: 0 0 20%;
+        width: 20%;
+        overflow: hidden;
+      }
+
+      // reset navbar-item style
+      .navbar-item {
+        padding: 0;
+        white-space: normal;
+      }
+
+      // links hover effect
+      .navbar-item {
+        display: inline-block;
+        @include link.a-animated-underline-link;
+
+        &:hover {
+          background-color: unset;
+        }
+      }
+
+      .text-column {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+
+        .navbar-section {
+          font-size: var(--font-size-16);
+          font-weight: var(--font-weight-600);
+          line-height: var(--line-height-150);
+          color: var(--color-grey--500);
+        }
+
+        // distance between elements:
+        .navbar-section + .navbar-section,
+        .navbar-item + .navbar-item {
+          margin-top: var(--spacing-4);
+        }
+
+        .navbar-section + .navbar-item {
+          margin-top: var(--spacing-5);
+        }
+
+        .navbar-item + .navbar-section {
+          margin-top: var(--spacing-6);
+        }
+
+      }
+
+      .highlights-column {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+
+        // distance between elements:
+        .navbar-item + .navbar-item {
+          margin-top: var(--spacing-4);
+        }
+
+        .navbar-item {
+          font-size: var(--font-size-32);
+          font-weight: var(--font-weight-500);
+          line-height: var(--line-height-150);
+          color: $color-navbar-link;
+        }
+      }
+
     }
   }
 }
