--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/page/body.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/page/body.html
@@ -19,9 +19,8 @@
 <sly data-sly-use.extra="pl.ds.kyanite.common.components.models.PageComponent">
   <sly data-sly-set.templateMarker="template-${extra.templateName}"></sly>
   <sly data-sly-set.pageMarker="page-${extra.pageName}"></sly>
-  <sly data-sly-set.navbarFixed="${properties.navbarFixed ? properties.navbarFixedPosition : ''}"></sly>
 
-  <body class="${properties.defaultTemplateCSS} ${templateMarker} ${pageMarker} ${navbarFixed} ${properties.background}">
+  <body class="${properties.defaultTemplateCSS} ${templateMarker} ${pageMarker} ${properties.background}">
   <sly data-sly-include="body-content.html"></sly>
   </body>
 </sly>
