[KYAN-114] navbar meta navigation (#327)
* [KYAN-114] Add NavbarMenuComponent class and enable adding meta navigation items

* [KYAN-114] Change model class

* [KYAN-114] Map fixed option to NavbarMenu

* [KYAN-114] Show only children of start and end type in Navbar menu

* KYAN-114: put meta-menu in navbar-start

* KYAN-114: dynamically calculate body padding (fixed navbar)

* KYAN-114: add navbar padding (as in designs)

* [KYAN-114] Remove fixed position from page properties

* KYA-114: Change navbar elements height if meta navigation is present

* KYA-114: Fix navbar items alignment

* [KYAN-114] Fix functional and add visual tests

---------

Co-authored-by: Pawel Nowak <pawel.nowak@ds.pl>
Co-authored-by: Paweł Jóźwicki <pawel.jozwicki@ds.pl>

--- a/applications/common/frontend/src/atomic-design-system/03-organism/o.navbar/o.navbar.scss
+++ b/applications/common/frontend/src/atomic-design-system/03-organism/o.navbar/o.navbar.scss
@@ -34,16 +34,41 @@ $color-navbar-link: var(--color-grey--900);
   // https://www.w3.org/TR/css-transforms-1/#containing-block-for-all-descendants
   transform: translateX(0);
 
+  padding-top: var(--spacing-4);
+
+  @include breakpoint.media-breakpoint-large {
+    padding-top: var(--spacing-5);
+    padding-bottom: var(--spacing-4);
+  }
+
   .container {
     align-items: center;
   }
 
+  .navbar,
   .navbar-end,
   .navbar-menu,
-  .navbar-start {
+  .navbar-start,
+  .navbar-top {
     @include breakpoint.media-breakpoint-large {
       align-items: center;
       height: 100%;
+    }
+  }
+
+  .navbar-menu {
+    &.has-navbar-top {
+      .navbar-end,
+      .navbar-start{
+        @include breakpoint.media-breakpoint-large {
+          height: 50%;
+        }
+      }
+      .navbar-top {
+        @include breakpoint.media-breakpoint-large {
+          height: calc(50% - var(--spacing-2));
+        }
+      }
     }
   }
 
@@ -92,12 +117,16 @@ $color-navbar-link: var(--color-grey--900);
     padding-right: var(--spacing-4);
     padding-bottom: var(--spacing-4);
 
+    flex-shrink: 1;
+
     @include breakpoint.media-breakpoint-large {
+      flex-wrap: wrap;
       padding-bottom: 0;
     }
 
     .navbar-end,
-    .navbar-start {
+    .navbar-start,
+    .navbar-top {
       display: flex;
       flex-direction: column;
       gap: 0;
@@ -109,7 +138,23 @@ $color-navbar-link: var(--color-grey--900);
       }
     }
 
+    .navbar-top {
+      .navbar-item {
+        font-size: var(--font-size-14);
+        font-weight: var(--font-weight-500);
+        line-height: var(--line-height-155);
+      }
+
+      @include breakpoint.media-breakpoint-large {
+        flex-basis: 100%;
+        display: flex;
+        justify-content: flex-end;
+        margin-bottom: var(--spacing-2);
+      }
+    }
+
     a.navbar-item:not(.navbar-dropdown a.navbar-item) {
+      height: 24px;
       display: inline-block;
       @include breakpoint.media-breakpoint-large {
         @include link.a-animated-underline-link;
@@ -196,6 +241,7 @@ $color-navbar-link: var(--color-grey--900);
       position: fixed;
       width: 100%;
       left: 0;
+      top: calc(100% - var(--spacing-4));
 
       // make sure columns layout will be 5 columns of equal width
       .column {
