--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/navbar/navbarmegadropdown/navbarmegadropdown.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/navbar/navbarmegadropdown/navbarmegadropdown.html
@@ -27,8 +27,8 @@
       <div class="container">
         <div class="columns is-desktop">
           <sly data-sly-list.column="${model.dropdownColumns}">
-            <sly data-sly-test="${column.type == 'text'}">
-              <div class="column text-column">
+            <sly data-sly-test="${!column.hideColumn && column.type == 'text'}">
+              <div class="column text-column ${column.colSizeClass}">
                 <sly data-sly-list.section="${column.sections}">
                   <span class="navbar-section">
                     ${section.label}
@@ -41,8 +41,8 @@
                 </sly>
               </div>
             </sly>
-            <sly data-sly-test="${column.type == 'highlights'}">
-              <div class="column highlights-column">
+            <sly data-sly-test="${!column.hideColumn && column.type == 'highlights'}">
+              <div class="column highlights-column ${column.colSizeClass}">
                 <sly data-sly-list.highlight="${column.highlights}">
                   <a class="navbar-item ${highlight.isExternalUrl ? 'external-url' : ''}" href="${highlight.url}" target="${highlight.isExternalUrl ? '_blank' : ''}">
                     ${highlight.label}
