--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/page/head.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/page/head.html
@@ -24,11 +24,11 @@
   <meta data-sly-test.description="${properties.description}" name="description"
         content="${description}">
 
-  <meta data-sly-test.ogImage="${properties.ogImage}" name="og:image" content="${ogImage}"/>
-  <meta data-sly-test.ogType="${properties.ogType}" name="og:type" content="${ogType}"/>
-  <meta data-sly-test.ogUrl="${properties.ogUrl}" name="og:url" content="${ogUrl}"/>
-  <meta data-sly-test.ogDescription="${properties.ogDescription}" name="og:description" content="${ogDescription}"/>
-  <meta data-sly-test.ogTitle="${properties.ogTitle}" name="og:title" content="${ogTitle}">
+  <meta data-sly-test.ogImage="${properties.ogImage}" name="image" property="og:image"  content="${ogImage}"/>
+  <meta data-sly-test.ogType="${properties.ogType}" property="og:type" content="${ogType}"/>
+  <meta data-sly-test.ogUrl="${properties.ogUrl}" property="og:url" content="${ogUrl}"/>
+  <meta data-sly-test.ogDescription="${properties.ogDescription}" property="og:description" content="${ogDescription}"/>
+  <meta data-sly-test.ogTitle="${properties.ogTitle}" property="og:title" content="${ogTitle}">
   <meta data-sly-test.twitterCard="${properties.twitterCard}" name="twitter:card" content="${twitterCard}"/>
   <meta data-sly-test.twitterTitle="${properties.twitterTitle}" name="twitter:title" content="${twitterTitle}">
   <meta data-sly-test.twitterImageAlt="${properties.twitterImageAlt}" name="twitter:image:alt" content="${twitterImageAlt}"/>
