[KYAN-133] Add a page space dedicated to dark mode. It will use different styles that will overwrite the original ones

--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/page/head-libs.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/page/head-libs.html
@@ -62,7 +62,14 @@
   href="/libs/kyanite/webroot/main.published.css"
 />
 
-<sly data-sly-use.model="pl.ds.kyanite.common.components.helpers.PageModel"></sly>
+<sly data-sly-use.pagesSpace="pl.ds.kyanite.common.components.models.PagesSpaceComponent"></sly>
+<link
+    rel="stylesheet"
+    type="text/css"
+    data-sly-test="${pagesSpace.getStylesPath}"
+    href="${pagesSpace.getStylesPath}"
+/>
+
 <!-- Google Tag Manager (noscript) -->
 <noscript data-sly-test="${model.hasAnalyticsUrl}"><iframe src="${model.googleAnalyticsUrl}"
                   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
