--- a/applications/common/frontend/src/dark-mode/atomic-design-system/00-token/t.color/_index.scss
+++ b/applications/common/frontend/src/dark-mode/atomic-design-system/00-token/t.color/_index.scss
@@ -1,6 +1,6 @@
 /*!
  * <!--
- *     Copyright (C) 2023 Dynamic Solutions
+ *     Copyright (C) 2024 Dynamic Solutions
  *
  *     Licensed under the Apache License, Version 2.0 (the "License");
  *     you may not use this file except in compliance with the License.
@@ -16,25 +16,4 @@
  * -->
  */
 
-@use 'src/atomic-design-system/03-organism/o.body-background' as
-  o-body-background;
-
-$bulma-navbar-height: 3.25rem;
-
-html {
-  // this prevents jumping content when clicking on anchor link in table of contents (KYAN-50)
-  scroll-padding-top: $bulma-navbar-height;
-}
-
-body {
-  background-color: var(--base-color-body-background);
-  color: var(--base-color-body-text, #686868);
-}
-
-body.lines {
-  @include o-body-background.o-body-background--lines;
-}
-
-body.squares {
-  @include o-body-background.o-body-background--squares;
-}
+@forward 't.color';
